[package]
name = "wordsnap"
version = "0.1.1"
description = "A lightweight desktop selection translation tool."
authors = ["Yuntsy"]
edition = "2021"

[lib]
name = "wordsnap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
enigo = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["time"] }
